--- a/contactus.html
+++ b/contactus.html
@@ -156,6 +156,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-9 offset-md-1">
+                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
 
                         <div class="col-md-9 offset-md-3 text-center">
                             <button type="submit" class="btn btn-primary ml-auto">Send Feedback</button>
