--- a/contactus.html
+++ b/contactus.html
@@ -92,10 +92,10 @@
         </div>
 
         <div class="row row-content ">
-           <div class="col-12 ">
+           <div class="col-12 text-center ">
               <h3>Send us your Feedback</h3>
            </div>
-            <div class="col-12 col-md-9">
+            <div class="col-12 col-md-9 text-center">
                 <form>
                     <div class="form-group row">
                         <label for="firstname" class="col-md-2 col-form-label">First Name</label>
