--- a/aboutus.html
+++ b/aboutus.html
@@ -21,7 +21,9 @@
     <nav class="navbar navbar-dark navbar-expand-sm bg-primary fixed-top">
         <div class="container">
             
-           <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+           <a class="navbar-brand" href="#">
+               <img src="assets/img/logo.png" class="d-flex mr-auto img-fluid" height="20" width="40">
+           </a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,7 +45,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm ml-500">
+                    <img src="assets/img/logo.png" class="d-flex ml-auto img-fluid" >
                 </div>
             </div>
         </div>
