--- a/index.html
+++ b/index.html
@@ -33,12 +33,46 @@
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" data-toggle="modal" data-target="#loginmodal"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
+
                 </ul> 
             </div>
                            
         </div>
     </nav>
+    <div id="loginmodal" class="modal fade" role="dialog">
 
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content" >
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button class="close" type="button" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group ">
+                          <label for="exampleInputEmail1">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+
+                      </form>
+                </div>
+            </div>
+        </div>
+
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -50,7 +84,11 @@
                     <img src="assets/img/logo.png" class="  img-fluid">
                 </div>
                 <div class="col-12 col-sm col-md col-lg align-self-center text-center">
-                    <a class="btn btn-primary text-center" style="padding-left: 50px;padding-right: 50px;" role="button" href="./index.html#reservetable">Reserve Table</a>
+                    <a class="btn btn-primary text-center" style="padding-left: 50px;padding-right: 50px;" role="button" href="./index.html#reservetable"
+                     data-toggle="tooltip"
+                     data-html="true" 
+                     title = 'Or Call Us <br><i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>'
+                     data-placement="bottom">Reserve Table</a>
                 </div>
 
             </div>
@@ -123,12 +161,30 @@
                             <div class="form-group row">
                                 <label for="numberg" class="col-12 col-sm-4 col-form-label" >Number of Guests</label>
                                 <div class="col-12 col-sm-8 ">
-                                    <label class="radio-inline"><input type="radio" value="1" name="numberg" id="numberg"> 1 </label>
-                                    <label class="radio-inline"><input type="radio" value="2" name="numberg" id="numberg"> 2 </label>
-                                    <label class="radio-inline"><input type="radio" value="3" name="numberg" id="numberg"> 3 </label>
-                                    <label class="radio-inline"><input type="radio" value="4" name="numberg" id="numberg"> 4 </label>
-                                    <label class="radio-inline"><input type="radio" value="5" name="numberg" id="numberg"> 5 </label>
-                                    <label class="radio-inline"><input type="radio" value="6" name="numberg" id="numberg"> 6 </label>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="3">
+                                        <label class="form-check-label" for="inlineRadio2">3</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="4">
+                                        <label class="form-check-label" for="inlineRadio2">4</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="5">
+                                        <label class="form-check-label" for="inlineRadio2">5</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="4">
+                                        <label class="form-check-label" for="inlineRadio3">6</label>
+                                      </div>
 
                                 </div>
                             </div>
@@ -201,6 +257,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"').tooltip();
+        });
+    </script>
 </body>
 
 </html>
