--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h4 class="modal-title">Login</h4>
                     <button class="close" type="button" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body align-content-center">
                     <form>
                         <div class="form-group ">
                           <label for="exampleInputEmail1">Email address</label>
