--- a/index.html
+++ b/index.html
@@ -139,14 +139,9 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                       </a>
-                      <div class="btn-group" id="carouselbtngroup">
-                        <button class="btn btn-danger btn-sm" id="pausebutton">
+                        <button class="btn btn-danger btn-sm" id="carouselbutton">
                             <span class="fa fa-pause"></span>
                         </button>
-                        <button class="btn btn-danger btn-sm" id="resumebutton">
-                          <span class="fa fa-play"></span>
-                      </button>
-                    </div>
                 </div>
                
             </div>
@@ -398,12 +393,19 @@
         $(document).ready(function(){
             $('[data-toggle="tooltip"').tooltip();
             $('#mycarousel').carousel({interval:2000});
-            $('#pausebutton').click(function() {
-                $('#mycarousel').carousel('pause');
-            });
-            $('#resumebutton').click(function() {
-                $('#mycarousel').carousel('cycle');
-            });
+            $('#carouselbutton').click(function() {
+                if ($('#carouselbutton').children('span').hasClass('fa-pause')){
+                    $('#mycarousel').carousel('pause');
+                    $('#carouselbutton').children('span').removeClass('fa-pause');
+                    $('#carouselbutton').children('span').addClass('fa-play'); 
+                }
+                else {
+                    $('#mycarousel').carousel('cycle');
+                    $('#carouselbutton').children('span').removeClass('fa-play');
+                    $('#carouselbutton').children('span').addClass('fa-pause');
+                };
+                
+        });
         });
     </script>
 </body>
