--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="" data-toggle="modal" data-target="#loginmodal"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
+                    <li class="nav-item"><a class="nav-link" role="button" id="navloginbutton"><span class="fa fa-sign-in fa-lg"></span>Connexion</a></li>
 
                 </ul> 
             </div>
@@ -44,7 +44,7 @@
 
         <div class="modal-dialog modal-lg" role="content">
             <div class="modal-content" >
-                <div class="modal-header">
+                <div class="modal-header ">
                     <h4 class="modal-title">Login</h4>
                     <button class="close" type="button" data-dismiss="modal">&times;</button>
                 </div>
@@ -64,6 +64,8 @@
                           <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div>
                         <div class="form-group text-center">
+                        <button type="submit" class="btn btn-secondary">Cancel</button>
+
                         <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
 
@@ -85,7 +87,7 @@
                 </div>
                 <div class="col-12 col-sm col-md col-lg align-self-center text-center">
                     <a class="btn btn-primary text-center" style="padding-left: 50px;padding-right: 50px;" role="button"
-                     data-toggle="modal" data-target="#reservetable0">Reserve Table</a>
+                     id="reservetablebutton">Reserve Table</a>
                 </div>
 
             </div>
@@ -204,8 +206,8 @@
             </div>
         </div>
     </div>
-    <div id="reservetable0" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
+    <div id="reservetable0" class="modal fade " role="dialog">
+        <div class="modal-dialog modal-lg "  role="content">
             <div class="modal-content">
                 <div class="modal-header">
                     <h1 class="modal-title text-center">Reserveation</h1>
@@ -273,7 +275,7 @@
                             <div class="col-md-9  text-center">
                                 <button type="button" class="btn btn-secondary  ml-auto" data-dismiss="modal">Cancel</button>
 
-                                <button type="submit" class="btn btn-primary ml-auto">Reserve Table</button>
+                                <button type="submit" class="btn btn-primary ml-auto">Reserve</button>
                             </div>
     
                         </div>
@@ -406,7 +408,15 @@
                 };
                 
         });
+        $('#reservetablebutton').click(function(){
+                $('#reservetable0').modal('handleUpdate');
+                $('#reservetable0').modal('toggle');
+            });
         });
+        $('#navloginbutton').click(function(){
+            $('#loginmodal').modal('handleUpdate');
+            $('#loginmodal').modal('show');
+        })
     </script>
 </body>
 
