--- a/index.html
+++ b/index.html
@@ -391,33 +391,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"').tooltip();
-            $('#mycarousel').carousel({interval:2000});
-            $('#carouselbutton').click(function() {
-                if ($('#carouselbutton').children('span').hasClass('fa-pause')){
-                    $('#mycarousel').carousel('pause');
-                    $('#carouselbutton').children('span').removeClass('fa-pause');
-                    $('#carouselbutton').children('span').addClass('fa-play'); 
-                }
-                else {
-                    $('#mycarousel').carousel('cycle');
-                    $('#carouselbutton').children('span').removeClass('fa-play');
-                    $('#carouselbutton').children('span').addClass('fa-pause');
-                };
-                
-        });
-        $('#reservetablebutton').click(function(){
-                $('#reservetable0').modal('handleUpdate');
-                $('#reservetable0').modal('toggle');
-            });
-        });
-        $('#navloginbutton').click(function(){
-            $('#loginmodal').modal('handleUpdate');
-            $('#loginmodal').modal('show');
-        })
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
